--- a/base.css
+++ b/base.css
@@ -29,4 +29,25 @@ body {
 .card:hover {
     box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
     transform: translateY(-3px) scale(1.1);
- }
+}
+
+.flex-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    color: black;
+}
+.flex-wrapper a {
+    background-color: white;
+    border: 1px solid transparent;
+    color: currentColor;
+    padding: 10px 15px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    transition: color 0.5s ease-out;
+}
+.flex-wrapper a:hover {
+    background-color: black;
+    border: 1px solid white;
+    color:white;
+}
